--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
   <packaging>jar</packaging>
   <version>00.07.00</version>
   <name>boundary_plugin_ticker</name>
-  <description>Boundary Plugin Ticker reports on a stock's price and volume</description>
-  <url>https://github.com/jdgwartney/boundary-plugin-shell</url>
+  <description>Boundary Plugin Ticker reports on a stock's current price and volume for the current day</description>
+  <url>https://github.com/boundary/boundary-plugin-shell</url>
   <properties>
     <exec-maven-plugin-version>1.3</exec-maven-plugin-version>
   </properties>
